--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages Site</title>
+    <title>My Website</title>
+    <link rel="stylesheet" href="style.css"> <!-- CSS File -->
 </head>
 <body>
-    <h1>Welcome to My GitHub Pages!</h1>
-    <p>This is my first web page deployed using GitHub Pages.</p>
+    <h1>Welcome to My Website!</h1>
+    <p>This is my GitHub Pages site.</p>
+    
+    <script src="index.js"></script> <!-- JavaScript File -->
 </body>
 </html>
