--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
-    <link rel="stylesheet" href="style.css"> <!-- CSS File -->
+    
+    <!-- CSS Files -->
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="audio.css">
 </head>
 <body>
     <h1>Welcome to My Website!</h1>
     <p>This is my GitHub Pages site.</p>
-    
-    <script src="index.js"></script> <!-- JavaScript File -->
+
+    <!-- JavaScript Files -->
+    <script src="index.js"></script>
+    <script src="audio.js"></script>
 </body>
 </html>
